# hw

./: .gitignore  .justfile  COPYRIGHT  Cargo.toml  LICENSE  build.rs  git_history.txt  pkey.txt  readme.md  readme.zh.md  rustfmt.toml
.cargo/: config.toml
assets/: app.manifest  app.rc
docs/: README.ZH.MD
examples/: aida64_cpu_clock.rs  cli.rs  core_temp.rs  desktop.rs  dhcp.rs  disk.rs  drive.rs  file_info.rs  lhm_cpu_clock.rs  memory_manufacturer_partnumber.rs  net_interfaces.rs  ohm_cpu_clock.rs  os_cpu_clock.rs  os_more_base.rs  os_more_desktop.rs  os_more_net_interfaces.rs  os_office.rs  os_system.rs  osinfo_more.rs  ping.rs  set_static.rs  sync_datetime.rs
src/: lib.rs  main.rs  os_office.rs  share.rs  wmic.rs
src/aida64/: mod.rs
src/api_test/: inner.rs  mod.rs
src/argus_monitor/: mod.rs
src/cli/: api.rs  mod.rs
src/common/: mod.rs
src/common/system/: process.rs
src/core_temp/: mod.rs
src/disk/: mod.rs
src/drive/: mod.rs  ty.rs  win.rs
src/file_info/: api.rs  mod.rs  ty.rs  win.rs
src/lhm/: mod.rs
src/ohm/: mod.rs
src/os/: mod.rs  more.rs
src/os/drive/: mod.rs  win.rs
src/os/net_interface/: mod.rs  ty.rs
src/os/net_manage/: dhcp.rs  ping.rs
src/os/user_desktop/: ty.rs  unix.rs  win.rs
src/os_more/: api.rs  mod.rs
src/os_more/desktop/: mod.rs  unix.rs  win.rs
src/os_more/net_interface/: unix.rs  win.rs
src/os_more/net_manage/: dhcp.rs  mod.rs  ping.rs  static.rs  sync_datetime.rs
src/os_more/user_desktop/: mod.rs
src/os_system/: api.rs  mod.rs  ty.rs
