[lib]
# 设置 crate 类型，有三个选项：`rlib` (Rust library)，`dylib` (dynamic library)，`cdylib` (C-compatible dynamic library)
crate-type = ["rlib"]
proc-macro = false

[features]
ohm = ["wmi", "system"]
aida64 = ["wmi", "system"]
cli = ["structopt"]
system = ["sysinfo/system"]
user = ["sysinfo/user"]
network = ["sysinfo/network"]
multithread = ["sysinfo/multithread"]
disk = ["sysinfo/disk"]
component = ["sysinfo/component"]
os = ["system", "user", "network", "multithread", "disk", "component"]
build = ["winresource", "static_vcruntime", "e-utils/build"]
built = ["dep:built", "e-utils/fs"]
default = ["aida64", "os", "ohm", "cli"]

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1", optional = true }
static_vcruntime = { version = "2", optional = true }
[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"], optional = true }
e-utils = { version = "0.4" }

[target.'cfg(target_os="windows")'.dependencies]
wmi = { version = "0.14", optional = true }

[dependencies]
e-utils = { version = "0.4", features = ["tokio", "cmd"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", optional = true }
strum = { version = "0.26", features = ["derive"] }
sysinfo = { version = "0.33", default-features = false, optional = true }


[dev-dependencies]
hw = { path = "./" }

[package]
name = "hw"
version = "0.1.0"
authors = [
    "Eternal Night <EternalNight996@gmail.com, EternalNightYeah2@yeah.net>",
]
edition = "2021"
rust-version = "1.78.0"
license-file = "LICENSE"
homepage = "https://gitee.com/eternalnight996"
description = "MII - Machine Internal Inspection"
documentation = "https://docs.rs/hw"
keywords = ["hardware", "monitor", "system", "sensors", "hw"]
categories = [
    "hardware-support",
    "os::windows-apis",
    "development-tools::monitoring",
    "system-programming",
    "command-line-utilities"
]
include = ["src/", "*.md", "*LICENSE*", "Cargo.toml", "COPYRIGHT", "build.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
